[tool.poetry]
name = "dbt-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
dbt-core = "^1.5.2"
dbt-bigquery = "^1.5.3"
google-cloud-bigquery = "^3.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
